packages/turboquant_flutter/lib/src/ffi/turboquant_bindings.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names
// ignore_for_file: unused_element
// ignore_for_file: unused_field
// ignore_for_file: return_of_invalid_type
// ignore_for_file: void_checks
// ignore_for_file: constant_identifier_names
// ignore_for_file: unnecessary_overrides

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Dart bindings for TurboQuant (llama.cpp fork)
class TurboQuantBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  TurboQuantBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  TurboQuantBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  bool tq_probe(
    ffi.Pointer<tq_probe_result_t> out_probe,
    ffi.Pointer<ffi.Char> err,
    int err_cap,
  ) {
    return _tq_probe(out_probe, err, err_cap);
  }

  late final _tq_probePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(
            ffi.Pointer<tq_probe_result_t>,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
          )
        >
      >('tq_probe');
  late final _tq_probe = _tq_probePtr
      .asFunction<
        bool Function(
          ffi.Pointer<tq_probe_result_t>,
          ffi.Pointer<ffi.Char>,
          int,
        )
      >();

  ffi.Pointer<tq_engine_t> tq_init(
    tq_config_t config,
    ffi.Pointer<ffi.Char> err,
    int err_cap,
  ) {
    return _tq_init(config, err, err_cap);
  }

  late final _tq_initPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<tq_engine_t> Function(
            tq_config_t,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
          )
        >
      >('tq_init');
  late final _tq_init = _tq_initPtr
      .asFunction<
        ffi.Pointer<tq_engine_t> Function(
          tq_config_t,
          ffi.Pointer<ffi.Char>,
          int,
        )
      >();

  void tq_free(ffi.Pointer<tq_engine_t> engine) {
    return _tq_free(engine);
  }

  late final _tq_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<tq_engine_t>)>>(
        'tq_free',
      );
  late final _tq_free = _tq_freePtr
      .asFunction<void Function(ffi.Pointer<tq_engine_t>)>();

  bool tq_generate(
    ffi.Pointer<tq_engine_t> engine,
    ffi.Pointer<ffi.Char> prompt,
    tq_token_cb callback,
    ffi.Pointer<ffi.Void> user_data,
    ffi.Pointer<ffi.Char> err,
    int err_cap,
  ) {
    return _tq_generate(engine, prompt, callback, user_data, err, err_cap);
  }

  late final _tq_generatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(
            ffi.Pointer<tq_engine_t>,
            ffi.Pointer<ffi.Char>,
            tq_token_cb,
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
          )
        >
      >('tq_generate');
  late final _tq_generate = _tq_generatePtr
      .asFunction<
        bool Function(
          ffi.Pointer<tq_engine_t>,
          ffi.Pointer<ffi.Char>,
          tq_token_cb,
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Char>,
          int,
        )
      >();

  void tq_stop_generation(ffi.Pointer<tq_engine_t> engine) {
    return _tq_stop_generation(engine);
  }

  late final _tq_stop_generationPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<tq_engine_t>)>>(
        'tq_stop_generation',
      );
  late final _tq_stop_generation = _tq_stop_generationPtr
      .asFunction<void Function(ffi.Pointer<tq_engine_t>)>();
}

final class tq_engine extends ffi.Opaque {}

typedef tq_engine_t = tq_engine;

final class tq_config_t extends ffi.Struct {
  external ffi.Pointer<ffi.Char> model_path;

  @ffi.Int32()
  external int n_ctx;

  @ffi.Int32()
  external int n_threads;

  external ffi.Pointer<ffi.Char> cache_type_k;

  external ffi.Pointer<ffi.Char> cache_type_v;

  @ffi.Bool()
  external bool use_gpu;
}

final class tq_probe_result_t extends ffi.Struct {
  @ffi.Bool()
  external bool gpu_available;

  @ffi.Bool()
  external bool metal_available;

  @ffi.Bool()
  external bool vulkan_available;

  @ffi.Bool()
  external bool turbo3_supported;

  @ffi.Bool()
  external bool turbo4_supported;

  @ffi.Int64()
  external int system_ram_mb;

  @ffi.Int32()
  external int recommended_n_ctx;
}

typedef tq_token_cbFunction =
    ffi.Void Function(
      ffi.Pointer<ffi.Char> token,
      ffi.Bool is_end,
      ffi.Pointer<ffi.Void> user_data,
    );
typedef Darttq_token_cbFunction =
    void Function(
      ffi.Pointer<ffi.Char> token,
      bool is_end,
      ffi.Pointer<ffi.Void> user_data,
    );
typedef tq_token_cb = ffi.Pointer<ffi.NativeFunction<tq_token_cbFunction>>;
